# sql-front

./: .gitignore  .project  AUTHORS  ChangeLog  Makefile.am  NEWS  README  Sunshine-Clean-SQL.launch  TODO  bootstrap  build-jar  build.generated.xml  build.main.xml  configure.ac  configure.in  gen-keywords  plugin.xml  sql-front.m4  sql-front.pc.in  sql-front.spec.in
.externalToolBuilders/: SQL build.main.xml.launch  SQL clean-project.xml.launch
calling-from-java-example/: build.sh  sql2clean.str
calling-from-java-example/example/: Example.java  run-example.sh  test-from-vlad.sql
editor/: SQL-Builders.esv  SQL-Colorer.esv  SQL-Completions.esv  SQL-Folding.esv  SQL-Outliner.esv  SQL-Refactorings.esv  SQL-References.esv  SQL-Syntax.esv  SQL.main.esv
editor/java/org/metaborg/lang/sql/: Activator.java  SQLParseController.java  SQLParseControllerGenerated.java  SQLValidator.java
editor/java/org/metaborg/lang/sql/strategies/: InteropRegisterer.java  Main.java  java_strategy_0_0.java
sig/: Makefile.am
sql2clean/: sql2clean.str
syn/: Makefile.am  SQL.sdf  Sql92Testing.sdf  SqlCondExp.sdf  SqlIdentifiers.sdf  SqlKeywords.sdf  SqlLiterals.sdf  SqlMisc.sdf  SqlScalarExp.sdf  SqlTableExp.sdf  SqlWhiteSpace.sdf  sql92.sdf
syn/languages/sql92/: Main.sdf  Misc.sdf  Statements.sdf
syn/languages/sql92/expressions/: Case.sdf  Cast.sdf  CharacterValue.sdf  Conditional.sdf  Primary.sdf  Scalar.sdf  Table.sdf  Value.sdf  ValueSpecification.sdf
syn/languages/sql92/lexical/: Identifier.sdf  Keyword.sdf  Literal.sdf  Whitespace.sdf
syntax/: Misc.sdf  SQL.generated.pp  SQL.pp  SQL.sdf  Statements.sdf
syntax/expressions/: Case.sdf  Cast.sdf  CharacterValue.sdf  Conditional.sdf  Primary.sdf  Table.sdf  Value.sdf  ValueSpecification.sdf
syntax/lexical/: Identifier.sdf  Keyword.sdf  Literal.sdf  Whitespace.sdf
test/: Makefile.am  column-1.sql  comment-only.sql  test-1.sql  test-10.sql  test-11.sql  test-12.sql  test-13.sql  test-14.sql  test-15-2.sql  test-15.sql  test-16.sql  test-17.sql  test-18.sql  test-19.sql  test-2-2.sql  test-2.sql  test-20.sql  test-21.sql  test-22.sql  test-23.sql  test-3.sql  test-4.sql  test-5.sql  test-6.sql  test-7.sql  test-8.sql  test-9.sql  test-from-vlad.sql  test-limit.sql
test/papillon/: questionaad.sql  questionaae.sql  questionaah.sql  questionaaj.sql  questionaal.sql  questionaam.sql  questionaan.sql  questionaaq.sql  questionaar.sql  questionaas.sql  questionaat.sql  questionaay.sql  questionaaz.sql  questionabb.sql  questionabe.sql  questionabg.sql  questionabk.sql  questionabw.sql  questionaca.sql  questionacc.sql  questionacn.sql  questionacq.sql  questionact.sql  questionadc.sql  questionadd.sql  questionade.sql  questionadg.sql  questionadh.sql  questionadi.sql  questionadl.sql  questionadn.sql  questionadq.sql  questionadu.sql  questionadv.sql  questionadw.sql  questionadx.sql  questionadz.sql  questionaee.sql  questionaef.sql  questionaeg.sql  (+181 more)
test/syn/: Makefile.am  column-1.sql  conditional-expr.testsuite  library.schema  query-expr.testsuite  scalar-exp.testsuite  table-exp.testsuite  test-12.sql  test-13.sql  test-14.sql  test-15-2.sql  test-17.sql  test-18.sql  test-2-2.sql  test-2.sql  test-22.sql  test-4.sql  test-8.sql  value-exp.testsuite  value-expr.testsuite
trans/: Makefile.am  check.str  sql-desugar.str  sql-limit-format.str  sql-shuffle.str  sql.str
xtc/: Makefile.am  auto-sql-front.str  parse-sql.str
