AC_INIT([sql-front],[0.0.1],[mbravenb@cs.uu.nl])
AM_INIT_AUTOMAKE

USE_XT_PACKAGES

AC_PROG_CC
AC_PROG_INSTALL

DETECT_SVN_REVISION

AC_SUBST(SVN_REVISION)
echo "** INFO -- SVN Revision is: $SVN_REVISION"

AC_CONFIG_FILES([\
	Makefile
  sql-front.spec
  syn/Makefile
  sig/Makefile
  trans/Makefile
  xtc/Makefile
  test/Makefile
  test/syn/Makefile
])
AC_OUTPUT
